--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     <header>
         <div class="logo-section" onclick="showPage('home')">
             <div class="logo">
-                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%232c5f7f'/%3E%3Ctext x='50' y='55' text-anchor='middle' dominant-baseline='middle' fill='white' font-size='24' font-weight='bold'%3ESCA%3C/text%3E%3C/svg%3E" alt="SCA Logo">
+                <img src="images/SCA Logo.png" alt="SCA Logo"' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%232c5f7f'/%3E%3Ctext x='50' y='55' text-anchor='middle' dominant-baseline='middle' fill='white' font-size='24' font-weight='bold'%3ESCA%3C/text%3E%3C/svg%3E" alt="SCA Logo">
             </div>
             <div class="company-name">SCA, INC</div>
         </div>
