--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         .hero {
             background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
-                        url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="400"><rect fill="%234a7a9e" width="1200" height="400"/></svg>');
+                        url('images/Hero.png' width="1200" height="400"><rect fill="%234a7a9e" width="1200" height="400"/></svg>');
             background-size: cover;
             background-position: center;
             color: white;
