--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         }
 
         .hero {
-            background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
-                        url('images/Hero.png' width="1200" height="400"><rect fill="%234a7a9e" width="1200" height="400"/></svg>');
+           background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
+            url('images/Hero.png'),
             background-size: cover;
             background-position: center;
             color: white;
