--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
         }
 
         .hero {
-           background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
-            url('images/Hero.png'),
+           background:<img src="images/Hero.png" alt="Columbus Ohio">
             background-position: center;
             color: white;
             text-align: center;
