--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         }
 
         .hero {
-           background:<img src="images/Hero.png" alt="Columbus Ohio">
+          background: url('images/Hero.png');
             background-position: center;
             color: white;
             text-align: center;
