--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
             display: block;
         }
 
-        .hero {
-          background: url('images/Hero.png');
-            background-position: center;
-            color: white;
-            text-align: center;
-            padding: 120px 50px;
-        }
+.hero {
+    background: url('images/Hero.png');
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+    padding: 120px 50px;
 
         .hero h1 {
             font-size: 42px;
