--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             font-size: 14px;
         }
 
+        .top-bar label,
+        .top-bar input,
+        .top-bar a {
+            display: block;
+        }
+
         .top-bar input {
             padding: 5px 10px;
             border: 1px solid #999;
@@ -57,6 +63,25 @@
             padding: 5px 15px;
             cursor: pointer;
             font-weight: bold;
+        }
+
+        @media (max-width: 768px) {
+            .top-bar {
+                padding: 10px 20px;
+                justify-content: center;
+            }
+
+            .top-bar label,
+            .top-bar input,
+            .top-bar a {
+                display: none;
+            }
+
+            .top-bar button {
+                display: block;
+                padding: 8px 30px;
+                font-size: 14px;
+            }
         }
 
         header {
@@ -112,6 +137,58 @@
             text-decoration: underline;
         }
 
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            gap: 5px;
+        }
+
+        .hamburger span {
+            width: 25px;
+            height: 3px;
+            background-color: #2c5f7f;
+            transition: 0.3s;
+        }
+
+        @media (max-width: 768px) {
+            nav {
+                position: fixed;
+                top: 0;
+                right: -100%;
+                height: 100vh;
+                width: 70%;
+                background-color: white;
+                flex-direction: column;
+                padding: 80px 30px;
+                box-shadow: -2px 0 5px rgba(0,0,0,0.1);
+                transition: right 0.3s;
+                z-index: 999;
+                gap: 30px;
+                align-items: flex-start;
+            }
+
+            nav.active {
+                right: 0;
+            }
+
+            .hamburger {
+                display: flex;
+                z-index: 1000;
+            }
+
+            .dropdown-content {
+                position: static;
+                display: none;
+                box-shadow: none;
+                padding-left: 20px;
+            }
+
+            .dropdown.active .dropdown-content {
+                display: block;
+            }
+        }
+
         .dropdown {
             position: relative;
             display: inline-block;
@@ -153,13 +230,15 @@
             display: block;
         }
 
-.hero {
-    background: url('images/Hero.png');
-    background-size: cover;
-    background-position: center;
-    color: white;
-    text-align: center;
-    padding: 120px 50px;
+        .hero {
+            background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
+                        url('images/Hero.png');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            text-align: center;
+            padding: 120px 50px;
+        }
 
         .hero h1 {
             font-size: 42px;
@@ -566,6 +645,99 @@
         .auth-links a:hover {
             text-decoration: underline;
         }
+
+        @media (max-width: 768px) {
+            .top-bar {
+                flex-wrap: wrap;
+                padding: 10px 20px;
+                font-size: 12px;
+            }
+
+            header {
+                padding: 15px 20px;
+            }
+
+            .logo-section {
+                gap: 10px;
+            }
+
+            .logo {
+                width: 50px;
+                height: 50px;
+            }
+
+            .company-name {
+                font-size: 20px;
+            }
+
+            .hero {
+                padding: 60px 20px;
+            }
+
+            .hero h1 {
+                font-size: 24px;
+            }
+
+            .hero p {
+                font-size: 14px;
+            }
+
+            .hero-small {
+                padding: 40px 20px;
+            }
+
+            .hero-small h1 {
+                font-size: 28px;
+            }
+
+            .content-section,
+            .info-section {
+                padding: 40px 20px;
+                margin: 40px auto;
+            }
+
+            .services-section {
+                padding: 40px 20px;
+            }
+
+            .services-grid,
+            .contact-container,
+            .team-grid,
+            .info-grid {
+                grid-template-columns: 1fr;
+                gap: 30px;
+            }
+
+            .contact-section {
+                padding: 40px 20px;
+            }
+
+            footer {
+                padding: 20px;
+            }
+
+            .auth-page {
+                padding: 40px 20px;
+            }
+
+            .auth-container {
+                padding: 20px;
+            }
+
+            .form-group {
+                flex-direction: column;
+                align-items: stretch;
+            }
+
+            .form-group label {
+                text-align: left;
+                min-width: auto;
+            }
+
+            .form-group input {
+                max-width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -586,16 +758,21 @@
             </div>
             <div class="company-name">SCA, INC</div>
         </div>
-        <nav>
-            <a onclick="showPage('about')">ABOUT</a>
-            <div class="dropdown">
+        <div class="hamburger" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <nav id="mainNav">
+            <a onclick="showPage('about'); closeMenu();">ABOUT</a>
+            <div class="dropdown" onclick="toggleDropdown(event)">
                 <a>OUR SERVICES</a>
                 <div class="dropdown-content">
-                    <a onclick="showPage('sub-plans')">SUB PLANS</a>
-                    <a onclick="showPage('additional-benefits')">ADDITIONAL BENEFITS</a>
+                    <a onclick="showPage('sub-plans'); closeMenu();">SUB PLANS</a>
+                    <a onclick="showPage('additional-benefits'); closeMenu();">ADDITIONAL BENEFITS</a>
                 </div>
             </div>
-            <a onclick="showPage('contact')">CONTACT US</a>
+            <a onclick="showPage('contact'); closeMenu();">CONTACT US</a>
         </nav>
     </header>
 
@@ -917,6 +1094,33 @@
                 window.scrollTo(0, 0);
             }
         }
+
+        function toggleMenu() {
+            const nav = document.getElementById('mainNav');
+            nav.classList.toggle('active');
+        }
+
+        function closeMenu() {
+            const nav = document.getElementById('mainNav');
+            nav.classList.remove('active');
+        }
+
+        function toggleDropdown(event) {
+            if (window.innerWidth <= 768) {
+                event.stopPropagation();
+                const dropdown = event.currentTarget;
+                dropdown.classList.toggle('active');
+            }
+        }
+
+        // Close menu when clicking outside
+        document.addEventListener('click', function(event) {
+            const nav = document.getElementById('mainNav');
+            const hamburger = document.querySelector('.hamburger');
+            if (!nav.contains(event.target) && !hamburger.contains(event.target)) {
+                nav.classList.remove('active');
+            }
+        });
     </script>
 </body>
 </html>
