update homepage images

--- a/index.html
+++ b/index.html
@@ -795,8 +795,7 @@
             <h2>TAKE THE STRESS OUT OF BENEFITS</h2>
             <p>WITH SCA, INC. BY YOUR SIDE</p>
             <div class="services-grid">
-                <div class="service-image">iStock<br>Credit: PeopleImages</div>
-                <div class="service-content">
+                <img src="images/SUPPLEMENTAL UNEMPLOYMENT BENEFIT PLAN.jpg" alt="Construction workers" class="service-image" style="object-fit: cover;">                <div class="service-content">
                     <h3>PWCA SUPPLEMENTAL UNEMPLOYMENT BENEFIT PLAN</h3>
                     <p>The PWCA Supplemental Unemployment Benefit Plan, or SUB Plan, uses fringe benefit dollars to provide income replacement for employees who have involuntary work stoppages.</p>
                     <p>Employers that provide the PWCA SUB Plan to their employees eliminate the additional payroll tax burden of paying fringe dollars in cash.</p>
@@ -807,7 +806,7 @@
                     <p>Through our nationwide network of Brokers, Agencies, and Plan Providers, SCA, Inc. can help you find the right Health Insurance, Retirement Plan, Hour Banking Program or other fringe benefit plan that meets your specific needs.</p>
                     <a onclick="showPage('additional-benefits')">LEARN MORE</a>
                 </div>
-                <div class="service-image">iStock<br>Credit: BF Productions</div>
+                <img src="images/ADDITIONAL FRINGE BENEFITS.jpg" alt="Office consultation" class="service-image" style="object-fit: cover;">
             </div>
         </section>
 
