update hero images across site

--- a/index.html
+++ b/index.html
@@ -240,6 +240,21 @@
             padding: 120px 50px;
         }
 
+.hero-sub-plans {
+    background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
+                url('images/sub-plans.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.hero-additional-benefits {
+    background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
+                url('images/add-bens.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+        
         .hero h1 {
             font-size: 42px;
             font-weight: bold;
