--- a/index.html
+++ b/index.html
@@ -908,7 +908,12 @@
         <section class="info-section">
             <h2>WHY CHOOSE THE SUB PLAN?</h2>
             <h3>PROTECT YOUR EMPLOYEES. IMPROVE YOUR BOTTOM LINE.</h3>
-            <p>The PWCA Supplemental Unemployment Benefit (SUB) Plan allows employers to use fringe benefit dollars.</p>
+            <p>TThe PWCA Supplemental Unemployment Benefit (SUB) Plan allows employers to use fringe benefit dollars to fund tax-free income replacement for employees who experience involuntary job loss between government contracts or seasonal work.</p>
+            <p> With the SUB Plan: 
+<li>Employees receive weekly benefits when out of work through no fault of their own.</li>
+<li>Employers reduce the need to pay out taxable fringe dollars as cash.</li>
+<li>You stay compliant with wage determinations under the Service Contract Act.</li></p>
+            
             <div style="text-align: center; margin-top: 40px;">
                 <button class="btn-dark btn" onclick="showPage('contact')">GET IN TOUCH</button>
             </div>
