update about page content

--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
         <section class="info-section">
             <h2>SERVICE CONTRACT ADMINISTRATORS, INC.</h2>
             <h3>WHAT WE DO</h3>
-            <p>SCA, Inc. helps Prevailing Wage employers increase their competitiveness, grow their businesses and win more jobs. We provide top-notch customer service to employee participants and employers alike.</p>
+            <p>SCA, Inc. helps Prevailing Wage employers increase their competitiveness, grow their businesses and win more jobs. We provide top-notch customer service to employee participants and employers alike. SCA, Inc. administers one of the largest association sponsored Supplemental Unemployment Benefit Plans in the country, the PWCA SUB Plan, which provides valuable income replacement for employees experiencing involuntary work stoppages.</p>
             <div style="text-align: center; margin-top: 30px;">
                 <button class="btn" onclick="showPage('home')">OUR SERVICES</button>
             </div>
