update sup plan content

--- a/index.html
+++ b/index.html
@@ -920,11 +920,16 @@
         </section>
 
         <section class="info-section bg-light">
-            <h2>HOW IT WORKS?</h2>
-            <h3>SIMPLE TO SET UP. EASY TO ADMINISTER.</h3>
+            <h2 style="text-align: left;>HOW IT WORKS?</h2>
+            <h3 style="text-align: left;>SIMPLE TO SET UP. EASY TO ADMINISTER.</h3>
             <div class="info-grid">
                 <div>
-                    <p style="text-align: left;">The SUB Plan is a qualified benefit program.</p>
+                    <p style="text-align: left;">The SUB Plan is a qualified benefit program under IRS guidelines. Contributions are made pre-tax, and employees receive tax-free benefits.  SCA, Inc. handles all the administration — from compliance to claims management.</p>
+                    <p style="text-align: left;">The process is simple: 
+<li>Employer allocates fringe dollars to the SUB Plan.</li>
+<li>SCA, Inc. manages the funds in a secure trust account.</li>
+<li>Employees who are laid off or between contracts can file a claim.</li>
+<li>Eligible employees receive weekly benefit payments tax-free.</li></p>
                     <button class="btn" onclick="showPage('about')">ABOUT US</button>
                 </div>
                 <div class="info-image">Profile Image</div>
