update additional details

--- a/index.html
+++ b/index.html
@@ -981,7 +981,8 @@
         <section class="info-section">
             <h2>OUR NETWORK</h2>
             <h3>SOLUTIONS TAILORED TO YOUR SPECIFIC NEEDS</h3>
-            <p>Through our nationwide network of Brokers, Agencies, and Plan Providers, SCA, Inc. helps employers offer affordable benefits.</p>
+            <p>Through our nationwide network of Brokers, Agencies, and Plan Providers, SCA, Inc. helps employers offer affordable, high-quality fringe benefits to their workforce — beyond just Supplemental Unemployment Benefit Plans. We offer a wide range of benefits including:
+</p>
             <ul style="margin: 30px auto; max-width: 500px; text-align: left;">
                 <li>Health Insurance</li>
                 <li>Retirement Plans</li>
