--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
             padding: 120px 50px;
         }
 
-.hero-sub-plans {
+.hero-sup-plans {
     background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
-                url('images/sub-plans.jpg');
+                url('images/sup-plans.jpg');
     background-size: cover;
     background-position: center;
 }
