--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             padding: 120px 50px;
         }
 
-.hero-sup-plans {
+.hero-sub-plans {
     background: linear-gradient(rgba(44, 95, 127, 0.7), rgba(44, 95, 127, 0.7)), 
                 url('images/sup-plans.jpg');
     background-size: cover;
