--- a/index.html
+++ b/index.html
@@ -940,9 +940,12 @@
             <p>BENEFITS THAT MAKE BUSINESS SENSE</p>
             <div style="max-width: 600px; margin: 40px auto; text-align: left;">
                 <ul style="list-style: disc; padding-left: 20px;">
-                    <li>Avoid the payroll tax hit</li>
-                    <li>Retain your workforce</li>
-                    <li>Boost employee loyalty</li>
+                    <li>Avoid the payroll tax hit of paying fringe dollars in cash
+<li>Retain your workforce between contracts
+<li>Boost employee loyalty and morale
+<li>Ensure DOL compliance with fringe benefit requirements
+<li>Nationwide service & support from real people
+
                 </ul>
             </div>
             <div style="text-align: center;">
