--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
     </div>
 
     <div id="sub-plans" class="page">
-        <section class="hero hero-small">
+        <section class="hero hero-small hero-sub-plans">
             <h1>PWCA Supplemental Unemployment Benefit Plan</h1>
             <p>Helping you support your workforce</p>
         </section>
@@ -975,7 +975,7 @@
     </div>
 
     <div id="additional-benefits" class="page">
-        <section class="hero hero-small">
+        <section class="hero hero-small hero-additional-benefits">
             <h1>Additional Benefits</h1>
             <p>Supporting your workforce with health, retirement benefits, and more</p>
         </section>
