--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@
         .auth-form button {
             margin: 20px auto 0;
             padding: 8px 30px;
-            background-color: white;
-            border: 1px solid #666;
-            color: #333;
+            background-color: #2c5f7f;
+            border: none;
+            color: white;
             cursor: pointer;
             font-size: 14px;
             font-family: 'Montserrat', sans-serif;
