--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
         </section>
 
         <footer>
-            <p>Note: This website is designed for general information only.</p>
+            <p>Note: This website is designed for general information only. The information presented at this site is not intended to provide specific legal, tax or other professional advice. Appropriate professional services should be sought regarding your individual situation. Any communication with our firm does not create a client relationship. A client relationship is formed only when you and the firm have signed a service agreement.</p>
         </footer>
     </div>
 
