--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
         </section>
 
         <footer>
-            <p>Service Contract Administrators, Inc. (SCA) complies with applicable Federal civil rights laws and does not discriminate on the basis of race, color, national origin, age, disability, or sex.</p>
+            <p>Note: This website is designed for general information only. The information presented at this site is not intended to provide specific legal, tax or other professional advice. Appropriate professional services should be sought regarding your individual situation. Any communication with our firm does not create a client relationship. A client relationship is formed only when you and the firm have signed a service agreement.</p>
         </footer>
     </div>
 
@@ -970,7 +970,7 @@
         </section>
 
         <footer>
-            <p>Note: This website is designed for general information only.</p>
+            <p>Note: This website is designed for general information only. The information presented at this site is not intended to provide specific legal, tax or other professional advice. Appropriate professional services should be sought regarding your individual situation. Any communication with our firm does not create a client relationship. A client relationship is formed only when you and the firm have signed a service agreement.</p>
         </footer>
     </div>
 
@@ -1013,7 +1013,7 @@
         </section>
 
         <footer>
-            <p>Note: This website is designed for general information only.</p>
+            <p>Note: This website is designed for general information only. The information presented at this site is not intended to provide specific legal, tax or other professional advice. Appropriate professional services should be sought regarding your individual situation. Any communication with our firm does not create a client relationship. A client relationship is formed only when you and the firm have signed a service agreement.</p>
         </footer>
     </div>
 
@@ -1035,7 +1035,7 @@
         </section>
 
         <footer>
-            <p>Service Contract Administrators, Inc. (SCA) complies with applicable Federal civil rights laws.</p>
+            <p>Note: This website is designed for general information only. The information presented at this site is not intended to provide specific legal, tax or other professional advice. Appropriate professional services should be sought regarding your individual situation. Any communication with our firm does not create a client relationship. A client relationship is formed only when you and the firm have signed a service agreement.</p>
         </footer>
     </div>
 
@@ -1063,7 +1063,7 @@
         </section>
 
         <footer>
-            <p>Service Contract Administrators, Inc. (SCA) complies with applicable Federal civil rights laws.</p>
+            <p>Note: This website is designed for general information only. The information presented at this site is not intended to provide specific legal, tax or other professional advice. Appropriate professional services should be sought regarding your individual situation. Any communication with our firm does not create a client relationship. A client relationship is formed only when you and the firm have signed a service agreement.</p>
         </footer>
     </div>
 
@@ -1090,7 +1090,7 @@
         </section>
 
         <footer>
-            <p>Service Contract Administrators, Inc. (SCA) complies with applicable Federal civil rights laws.</p>
+            <p>Note: This website is designed for general information only. The information presented at this site is not intended to provide specific legal, tax or other professional advice. Appropriate professional services should be sought regarding your individual situation. Any communication with our firm does not create a client relationship. A client relationship is formed only when you and the firm have signed a service agreement.</p>
         </footer>
     </div>
 
@@ -1108,7 +1108,7 @@
         </section>
 
         <footer>
-            <p>Service Contract Administrators, Inc. (SCA) complies with applicable Federal civil rights laws.</p>
+            <p>Note: This website is designed for general information only. The information presented at this site is not intended to provide specific legal, tax or other professional advice. Appropriate professional services should be sought regarding your individual situation. Any communication with our firm does not create a client relationship. A client relationship is formed only when you and the firm have signed a service agreement..</p>
         </footer>
     </div>
 
