--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
 <li>Eligible employees receive weekly benefit payments tax-free.</li></p>
                     <button class="btn" onclick="showPage('about')">ABOUT US</button>
                 </div>
-                <div class="info-image">Profile Image</div>
+              <div>  <img src="images/sup-plan.jpg" alt="Construction workers" class="service-image" style="object-fit: cover;"> </div>
             </div>
         </section>
 
