--- a/index.html
+++ b/index.html
@@ -922,34 +922,30 @@
   <h2 style="text-align: left;">HOW IT WORKS?</h2>
   <h3 style="text-align: left;">SIMPLE TO SET UP. EASY TO ADMINISTER.</h3>
   
-  <div class="info-grid">
-    <div>
-      <p style="text-align: left;">
-        The SUB Plan is a qualified benefit program under IRS guidelines. Contributions are made pre-tax, and employees receive tax-free benefits.  
-        SCA, Inc. handles all the administration — from compliance to claims management.
+  <div class="info-grid" style="display: flex; gap: 2rem; align-items: flex-start;">
+    <div style="flex: 1;">
+      <p style="text-align: left; margin-bottom: 1rem;">
+        The SUB Plan is a qualified benefit program under IRS guidelines. Contributions are made pre-tax, 
+        and employees receive tax-free benefits. SCA, Inc. handles all the administration — from compliance to claims management.
       </p>
-      <p style="text-align: left;">
+      <p style="text-align: left; margin-bottom: 0.5rem;">
         The process is simple:
-        <ul style="text-align: left;">
-          <li>Employer allocates fringe dollars to the SUB Plan.</li>
-          <li>SCA, Inc. manages the funds in a secure trust account.</li>
-          <li>Employees who are laid off or between contracts can file a claim.</li>
-          <li>Eligible employees receive weekly benefit payments tax-free.</li>
-        </ul>
       </p>
+      <ul style="text-align: left; margin-top: 0; margin-bottom: 1.5rem; padding-left: 1.2rem;">
+        <li>Employer allocates fringe dollars to the SUB Plan.</li>
+        <li>SCA, Inc. manages the funds in a secure trust account.</li>
+        <li>Employees who are laid off or between contracts can file a claim.</li>
+        <li>Eligible employees receive weekly benefit payments tax-free.</li>
+      </ul>
       <button class="btn" onclick="showPage('about')">ABOUT US</button>
     </div>
     
-    <div>
+    <div style="flex: 1;">
       <img 
         src="images/sup-plan.jpg" 
         alt="Construction workers" 
         class="service-image" 
-        style="object-fit: cover; width: 476px; height: 476px;"
-      >
-    </div>
-  </div>
-</section>
+        style="object-fit: cover; width: 100%; max-width: 476px; height: auto;
 
 
         <section class="services-section">
