--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
         alt="Construction workers" 
         class="service-image" 
         style="object-fit: cover; width: 100%; max-width: 476px; height: auto;
-
+</section>
 
         <section class="services-section">
             <h2>EMPLOYER BENEFITS</h2>
