--- a/index.html
+++ b/index.html
@@ -948,7 +948,8 @@
         style="object-fit: cover; width: 100%; max-width: 476px; height: auto;
 </section>
 
-        <section class="services-section">
+  <section class="info-section bg-light">
+                    <div class="info-grid">
             <h2>EMPLOYER BENEFITS</h2>
             <p>BENEFITS THAT MAKE BUSINESS SENSE</p>
             <div style="max-width: 600px; margin: 40px auto; text-align: left;">
@@ -964,7 +965,7 @@
             <div style="text-align: center;">
                 <button class="btn-dark btn" onclick="showPage('contact')">GET IN TOUCH</button>
             </div>
-        </section>
+                    </div>        </section>
 
         <section class="contact-section">
             <div class="contact-container">
