--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -948,7 +948,7 @@
         style="object-fit: cover; width: 100%; max-width: 476px; height: auto;
 </section>
 
-  <section class="info-section bg-light">
+  <section class="services-section">
             <h2>EMPLOYER BENEFITS</h2>
             <p>BENEFITS THAT MAKE BUSINESS SENSE</p>
             <div style="max-width: 600px; margin: 40px auto; text-align: left;">
