--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@ f<!DOCTYPE html>
   <section class="services-section">
             <h2>EMPLOYER BENEFITS</h2>
             <p>BENEFITS THAT MAKE BUSINESS SENSE</p>
-            <div style="max-width: 600px; margin: 40px auto; text-align: left;">
+            <div style="max-width: 600px; margin: 40px auto;">
                 <ul style="list-style: disc; padding-left: 20px;">
                     <li>Avoid the payroll tax hit of paying fringe dollars in cash
 <li>Retain your workforce between contracts
