--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@ f<!DOCTYPE html>
         src="images/sup-plan.jpg" 
         alt="Construction workers" 
         class="service-image" 
-        style="object-fit: cover; width: 100%; max-width: 476px; height: auto;
+        style="object-fit: cover; width: 100%; max-width: 476px; height: auto;</div>
 </section>
 
   <section class="services-section">
