--- a/index.html
+++ b/index.html
@@ -945,7 +945,8 @@ f<!DOCTYPE html>
         src="images/sup-plan.jpg" 
         alt="Construction workers" 
         class="service-image" 
-        style="object-fit: cover; width: 100%; max-width: 476px; height: auto;</div>
+        style="object-fit: cover; width: 100%; max-width: 476px; height: auto;></img>
+          </div>
 </section>
 
   <section class="services-section">
@@ -964,7 +965,7 @@ f<!DOCTYPE html>
             <div style="text-align: center;">
                 <button class="btn-dark btn" onclick="showPage('contact')">GET IN TOUCH</button>
             </div>
-                    </div>        </section>
+       </section>
 
         <section class="contact-section">
             <div class="contact-container">
