--- a/index.html
+++ b/index.html
@@ -949,23 +949,22 @@ f<!DOCTYPE html>
           </div>
 </section>
 
-  <section class="services-section">
+        <section class="services-section">
             <h2>EMPLOYER BENEFITS</h2>
             <p>BENEFITS THAT MAKE BUSINESS SENSE</p>
-            <div style="max-width: 600px; margin: 40px auto;">
+            <div style="max-width: 600px; margin: 40px auto; text-align: left;">
                 <ul style="list-style: disc; padding-left: 20px;">
-                    <li>Avoid the payroll tax hit of paying fringe dollars in cash
-<li>Retain your workforce between contracts
-<li>Boost employee loyalty and morale
-<li>Ensure DOL compliance with fringe benefit requirements
-<li>Nationwide service & support from real people
-
+                    <li>Avoid the payroll tax hit of paying fringe dollars in cash</li>
+                    <li>Retain your workforce between contracts</li>
+                    <li>Boost employee loyalty and morale</li>
+                    <li>Ensure DOL compliance with fringe benefit requirements</li>
+                    <li>Nationwide service & support from real people</li>
                 </ul>
             </div>
             <div style="text-align: center;">
                 <button class="btn-dark btn" onclick="showPage('contact')">GET IN TOUCH</button>
             </div>
-       </section>
+        </section>
 
         <section class="contact-section">
             <div class="contact-container">
