--- a/index.html
+++ b/index.html
@@ -918,52 +918,47 @@ f<!DOCTYPE html>
             </div>
         </section>
 
-<section class="info-section bg-light">
-  <h2 style="text-align: left;">HOW IT WORKS?</h2>
-  <h3 style="text-align: left;">SIMPLE TO SET UP. EASY TO ADMINISTER.</h3>
-  
-  <div class="info-grid" style="display: flex; gap: 2rem; align-items: flex-start;">
-    <div style="flex: 1;">
-      <p style="text-align: left; margin-bottom: 1rem;">
-        The SUB Plan is a qualified benefit program under IRS guidelines. Contributions are made pre-tax, 
-        and employees receive tax-free benefits. SCA, Inc. handles all the administration — from compliance to claims management.
-      </p>
-      <p style="text-align: left; margin-bottom: 0.5rem;">
-        The process is simple:
-      </p>
-      <ul style="text-align: left; margin-top: 0; margin-bottom: 1.5rem; padding-left: 1.2rem;">
-        <li>Employer allocates fringe dollars to the SUB Plan.</li>
-        <li>SCA, Inc. manages the funds in a secure trust account.</li>
-        <li>Employees who are laid off or between contracts can file a claim.</li>
-        <li>Eligible employees receive weekly benefit payments tax-free.</li>
-      </ul>
-      <button class="btn" onclick="showPage('about')">ABOUT US</button>
-    </div>
-    
-    <div style="flex: 1;">
-      <img 
-        src="images/sup-plan.jpg" 
-        alt="Construction workers" 
-        class="service-image" 
-        style="object-fit: cover; width: 100%; max-width: 476px; height: auto;></img>
-          </div>
-</section>
+     <section class="info-section bg-light">
+            <h2>HOW IT WORKS?</h2>
+            <h3>SIMPLE TO SET UP. EASY TO ADMINISTER.</h3>
+
+            <div class="info-grid">
+                <div>
+                    <p style="text-align: left;">The SUB Plan is a qualified benefit program under IRS guidelines. Contributions are made pre-tax, and employees receive tax-free benefits.</p>
+                    <p style="text-align: left;">SCA, Inc. handles all the administration — from compliance to claims management.</p>
+                    <p style="text-align: left; font-weight: 600; margin-top: 30px;">The process is simple:</p>
+                    <ol style="text-align: left; margin-left: 20px;">
+                        <li>Employer allocates fringe dollars to the SUB Plan.</li>
+                        <li>SCA, Inc. manages the funds in a secure trust account.</li>
+                        <li>Employees who are laid off or between contracts can file a claim.</li>
+                        <li>Eligible employees receive weekly benefit payments tax-free.</li>
+                    </ol>
+                    <div style="margin-top: 30px;">
+                        <button class="btn" onclick="showPage('about')">ABOUT US</button>
+                    </div>
+                </div>
+                 <img src="images/sup-plan.jpg" alt="Construction workers" class="service-image" style="object-fit: cover;"> 
+            </div>
+        </section>
 
         <section class="services-section">
             <h2>EMPLOYER BENEFITS</h2>
             <p>BENEFITS THAT MAKE BUSINESS SENSE</p>
+            
             <div style="max-width: 600px; margin: 40px auto; text-align: left;">
                 <ul style="list-style: disc; padding-left: 20px;">
-                    <li>Avoid the payroll tax hit of paying fringe dollars in cash</li>
-                    <li>Retain your workforce between contracts</li>
-                    <li>Boost employee loyalty and morale</li>
-                    <li>Ensure DOL compliance with fringe benefit requirements</li>
-                    <li>Nationwide service & support from real people</li>
+                    <li style="margin-bottom: 10px;">Avoid the payroll tax hit of paying fringe dollars in cash</li>
+                    <li style="margin-bottom: 10px;">Retain your workforce between contracts</li>
+                    <li style="margin-bottom: 10px;">Boost employee loyalty and morale</li>
+                    <li style="margin-bottom: 10px;">Ensure DOL compliance with fringe benefit requirements</li>
+                    <li style="margin-bottom: 10px;">Nationwide service & support from real people</li>
                 </ul>
             </div>
-            <div style="text-align: center;">
+
+            <div style="text-align: center; margin-top: 40px;">
                 <button class="btn-dark btn" onclick="showPage('contact')">GET IN TOUCH</button>
             </div>
+        </section>
         </section>
 
         <section class="contact-section">
